# KromoDo

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: db.rs  error.rs  events.rs  filter.rs  lib.rs  migration.rs  task.rs
core/src/db/: mod.rs  tasks.rs
core/src/models/: due.rs  mod.rs  priority.rs  task.rs
linux-ui/: Cargo.toml
linux-ui/data/: dev.kromodo.app.desktop  dev.kromodo.app.metainfo.xml  styles.css
linux-ui/src/: app.rs  main.rs
linux-ui/src/app/: events.rs  finalize.rs  theme.rs
linux-ui/src/components/: mod.rs  quick_add.rs  sidebar.rs  task_input.rs  task_row.rs
linux-ui/src/components/task_row/: context_menu.rs  date_picker.rs  mod.rs  styling.rs
