[workspace]
resolver = "2"
members = [
    "core",
    "linux-ui",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"